Remove docs from CI for now

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,9 +51,9 @@ python37:
   stage: test
   script: tox -e py37
 
-docs:
-  stage: test
-  script: make docs
+# docs:
+#   stage: test
+#   script: make docs
 
 deploy_pypi:
   stage: deploy
