--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ python =
 [testenv:flake8]
 basepython = python
 deps = flake8
-commands = flake8 fast_plotter --ignore=D301,E302,D103 --max-line-length=120
+commands = flake8 fast_plotter --ignore E402 --max-line-length=120
 
 [testenv]
 setenv =
