Add installation of tox for gitlab-ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ before_script:
   - curl -O https://bootstrap.pypa.io/get-pip.py
   - python get-pip.py
   - pip install -r .requirements_dev.txt
+  - pip install tox pytest-cov pytest
 
 after_script:
   - pip install codecov
