Change how we control the version number

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,11 +3,7 @@ current_version = 0.3.0
 commit = True
 tag = False
 
-[bumpversion:file:setup.py]
-search = version='{current_version}'
-replace = version='{new_version}'
-
-[bumpversion:file:fast_plotter/__init__.py]
+[bumpversion:file:fast_plotter/version.py]
 search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
 
