--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,8 +29,17 @@ classifiers = [
 dynamic = ["version"]
 requires-python = ">=3.8"
 
-[project.urls]
-Home = "https://github.com/fast-hep/fast-plotter"
+dependencies = [
+    "fast-curator",
+    "fast-flow",
+    "matplotlib >=3.0",
+    "mplhep >=0.2.16",
+    "pandas >= 1.5.0",
+    "numpy >= 1.20.0",
+    "scipy >= 1.9.0"
+]
+
+
 
 [project.optional-dependencies]
 test = [
@@ -45,6 +54,9 @@ docs = [
     "sphinxcontrib-bibtex >=2.4",
     "sphinxcontrib-programoutput >=0.16",
 ]
+
+[project.urls]
+Home = "https://github.com/fast-hep/fast-plotter"
 
 [project.scripts]
 fast_plotter = "fast_plotter.__main__:main"
