--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,11 +32,14 @@ requires-python = ">=3.8"
 dependencies = [
     "fast-curator",
     "fast-flow",
+    "hist",
     "matplotlib >=3.0",
     "mplhep >=0.2.16",
+    "omegaconf < 3.0",
     "pandas >= 1.5.0",
     "numpy >= 1.20.0",
-    "scipy >= 1.9.0"
+    "scipy >= 1.9.0",
+    "scikit-hep-testdata",
 ]
 
 
