feat: make_plots uses file name as input instead of dict

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ requires-python = ">=3.8"
 dependencies = [
     "fast-curator",
     "fast-flow",
+    "fast-logging",
     "hist",
     "matplotlib >=3.0",
     "mplhep >=0.2.16",
